Adds wifi user and password configuration.

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,13 +11,16 @@
 platform = espressif32
 framework = espidf
 board = esp32dev
+build_flags = -DCONFIG_WIFI_SSID=\"ESP_AP\" -DCONFIG_WIFI_PASSWORD=\"MYPASS\"
 
 [env:quantum]
 platform = espressif32
 framework = espidf
 board = quantum
+build_flags = -DCONFIG_WIFI_SSID=\"ESP_AP\" -DCONFIG_WIFI_PASSWORD=\"MYPASS\"
 
 [env:lolin32]
 platform = espressif32
 framework = espidf
 board = lolin32
+build_flags = -DCONFIG_WIFI_SSID=\"ESP_AP\" -DCONFIG_WIFI_PASSWORD=\"MYPASS\"
