feat: Update PlatformIO Configuration

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,13 +11,4 @@
 platform = espressif32
 framework = espidf
 board = esp32dev
-
-[env:quantum]
-platform = espressif32
-framework = espidf
-board = quantum
-
-[env:lolin32]
-platform = espressif32
-framework = espidf
-board = lolin32
+monitor_speed = 115200
