feat: Add Name for Libdeps

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,4 @@ platform = espressif32
 framework = espidf
 board = esp32dev
 monitor_speed = 115200
-lib_deps = https://github.com/UncleRus/esp-idf-lib
+lib_deps = esp-idf-lib=https://github.com/UncleRus/esp-idf-lib
